Enable excluding elements by selector

--- a/examples/landmarks.html
+++ b/examples/landmarks.html
@@ -183,6 +183,13 @@
       </div>
     </footer>
 
+    
+    <script>
+      window.UniversalKeyboardNavigatorOptions = { 
+          // excludeSelectors: ['[aria-label="content"]', 'footer'] 
+      }
+    </script>
+
     <script src="/index.js"></script>
   </body>
 </html>
